--- a/composer.json
+++ b/composer.json
@@ -42,9 +42,9 @@
     ],
     "require": {
         "php": "^7.4.0",
-        "illuminate/console": "^7.0|^8.0",
-        "illuminate/database": "^7.0|^8.0",
-        "illuminate/support": "^7.0|^8.0",
+        "illuminate/console": "^8.0",
+        "illuminate/database": "^8.0",
+        "illuminate/support": "^8.0",
         "kalnoy/nestedset": "^5.0.0",
         "rinvex/laravel-support": "^4.0.0",
         "spatie/laravel-sluggable": "^2.2.0",
@@ -52,7 +52,7 @@
     },
     "require-dev": {
         "codedungeon/phpunit-result-printer": "^0.27.0",
-        "illuminate/container": "^7.0|^8.0",
+        "illuminate/container": "^8.0",
         "phpunit/phpunit": "^9.0.0"
     },
     "autoload": {
